--- a/less/variables.less
+++ b/less/variables.less
@@ -23,4 +23,8 @@
 @btn-bg-color: #22283A;
 @border-real: #dee2e6;
 
+//font-sizes
+@extra-lg-font-size: 4.8rem;
+@main-font-size: 1.6rem;
+
 // Mobile var
