Style button - put signup text in anchor tag - create parametric mixins .button .hover-button to style signup button - use .hover-button parametric mixin to swap button colors on hover - update README.md on progress

--- a/css/index.css
+++ b/css/index.css
@@ -240,6 +240,19 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn a {
+  font-size: 1.6rem;
+  color: #F6F7F8;
+  text-decoration: none;
+  background-color: #22283A;
+  border-radius: 5px;
+  padding: 5px 8px;
+  transition: 0.4s ease-in-out;
+}
+.home .walk .walk-text .btn a:hover {
+  color: #22283A;
+  background-color: #F6F7F8;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
