--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,17 +1,14 @@
 // Home Content
 
 .home {
-
   .intro {
-
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
   }
 
   .space-images {
@@ -58,13 +55,21 @@
       }
 
       .btn {
+        a{
+        .link-style(@main-font-size, @porcelain);
+        .button(@btn-bg-color, 5px);
+        padding: 5px 8px;
+        transition: 0.4s ease-in-out;
+
+        .hover-button(@porcelain, @btn-bg-color);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +77,4 @@
       }
     }
   }
-}// home
+} // home
