--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,3 +11,15 @@
   color: @color;
   text-decoration: none;
 }
+
+.button(@bg-color, @radius){
+  background-color: @bg-color;
+  border-radius: @radius;
+}
+
+.hover-button(@bg-color, @font-color){
+  &:hover {
+    color: @font-color;
+    background-color: @bg-color;
+  }
+}
