--- a/css/index.css
+++ b/css/index.css
@@ -170,10 +170,20 @@ p {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 550px) {
+  .top-bar {
+    padding: 15px;
+  }
+}
 .top-bar h1 {
   font-size: 4.8rem;
   padding-bottom: 15px;
   color: #23293B;
+}
+@media (max-width: 550px) {
+  .top-bar h1 {
+    font-size: 3rem;
+  }
 }
 .top-bar nav {
   width: 100%;
@@ -204,16 +214,36 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+.home .intro div > .main-header-image {
+  width: 100%;
+  border-radius: 5px;
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 550px) {
+  .home .space-images {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 550px) {
+  .home .space-images img {
+    width: 100%;
+    margin: 0;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -231,14 +261,36 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 550px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 10px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 550px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+@media (max-width: 550px) {
+  .home .walk .walk-text .btn {
+    background-color: #22283A;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .home .walk .walk-text .btn a {
   font-size: 1.6rem;
@@ -256,6 +308,13 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 550px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+    padding: 10px;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
