--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,15 @@ p {
   font-size: 4.8rem;
   padding-bottom: 15px;
   color: #23293B;
+  animation-name: scale;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+@keyframes scale {
+  50% {
+    transform: scale(0.7);
+  }
 }
 @media (max-width: 550px) {
   .top-bar h1 {
